--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*------------------------------------------------------------------------------------
-Theme Name: Name of the theme
-Author: Author name
-URL: contact url
+Theme Name: DadaziBrand
+Author: waliur
+URL: waliurr00@gmail.com
 version: 1.0.0
 ------------------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------------------
