--- a/styles/settings/_settings.colors.scss
+++ b/styles/settings/_settings.colors.scss
@@ -10,9 +10,41 @@ $bodyColor: #2c3e50;
 
 //theme color
 $themeColor: #2980b9;
-$titleColor: #6c5ce7;
-$subtitleColor: #187e69;
-$textColor: #32325d;
+$themeYellow: #F9D662;
+$themeBlue: #3B268E;
+
+//text color
+$titleColor: #3C3664;
+$titleColorPurple: #2C2790;
+$textColor: #595954;
+$textColorGray: #81817F;
+
+//nav color
+$navItemColor: #535354;
+$navHoverColor: #F5D361;
 
 //background color
-$bgSection: #dfe6e9;
+$bgInput: #F8F8F8;
+$placeholderColor: #C4C4C4;
+$bgSlider: #FFFBF0;
+$bgFooter: #2A2294;
+$bgButton: #FEAF3A;
+$bgButtonBrightSun: #FDD03B;
+$bgLineColor: #E5E5E5;
+$bgWhiteLilac: #F8F9FC;
+
+//border color
+$borderColor: #EDEDED;
+$borderColorGray: #EAEBED;
+$borderColorGallery: #EBEBEB;
+$borderColorAlto: #D5D5D5;
+
+//others color
+$linkHoverColor: #FA9706;
+$metaColor: #E0E0E0;
+
+//icon color
+.fa-facebook{background-color: #285091;}
+.fa-whatsapp{background-color: #49C456;}
+.fa-twitter{background-color: #1C9CEA;}
+.fa-youtube{background-color: #D12322;}
