--- a/styles/components/_components.buttons.scss
+++ b/styles/components/_components.buttons.scss
@@ -6,10 +6,25 @@
     line-height: 28px;
     transition: 0.3s;
     &.btn-link{
-        background-color: rgb(230, 88, 211);
+        background-color: $bgButton;
         color: $white;
         &:hover{
-            background-color: rgb(138, 31, 124);
+            background-color: $themeYellow;
+            color: $white;
+        }
+    }
+    &.btn-border{
+        padding: 10px 36px;
+        border: 1px solid $black;
+        background: transparent;
+        text-transform: initial;
+        font-size: 12.5px;
+        font-weight: 500;
+        color: $black;
+        transition: 0.20s linear;
+        &:hover{
+            border: 1px solid $themeColor;
+            background: $themeColor;
             color: $white;
         }
     }
