--- a/styles/components/_components.pageHeader.scss
+++ b/styles/components/_components.pageHeader.scss
@@ -1,15 +1,15 @@
-.header-area{
-    position: fixed;
+.header{
+    position: absolute;
     z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
     background-color: #eff4f7;
-    padding: 15px 0;
+    padding: 0;
     transition: 0.5s;
     &.sticky{
         padding: 5px 0;
-        background-color: $white;
+        background-color: rgba(0, 0, 0, 0.8);
         box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 30px;
     }
 }
