--- a/styles/sections/slider/_sections.slider.scss
+++ b/styles/sections/slider/_sections.slider.scss
@@ -1,19 +1,21 @@
 .slider-area{
-    padding: 100px 0 50px 0;
+    margin-top: 120px;
+    padding: 0px 0 50px 0;
 }
 
 .slider{
     .owl-dots{
-        margin-top: 30px;
+        margin-top: 0px;
         text-align: center;
         .owl-dot{
             margin: 0 5px;
-            width: 14px;
-            height: 14px;
+            width: 20px;
+            height: 8px;
             border: 0;
             border-radius: 30px;
             background-color: #fd79a8;
             &.active{
+                width: 30px;
                 background-color: $titleColor !important;
             }
         }
@@ -23,6 +25,7 @@
 .slider{
     &__img{
         position: relative;
+        height: 100%;
         &::before{
             position: absolute;
             content: "";
@@ -31,7 +34,7 @@
             width: 100%;
             height: 100%;
             background-color: #224466;
-            opacity: 0.5;
+            opacity: 0;
         }
     }
     
@@ -59,7 +62,7 @@
         line-height: 28px;
         margin-bottom: 20px;
     }
-
+    
     &__buttons{
         margin-top: 30px;
     }
